--- a/css/site_index.css
+++ b/css/site_index.css
@@ -1,42 +1,81 @@
+*{
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+}
+html{
+    height: 100%;
+    text-align:center;
+    text-align:center;
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+}
 body{
+
+    text-align:center;
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
     float: left;
+    width: 100%;
+    height: 100%;
+    text-align:center;
+}
+main{
+    position: relative; /* боковая колонка перемещается в рамках основного содержания */
+    margin: 0 auto; /* сайт располагается по центру экрана */
+    max-width: 1200px; /* резиновая, растягивается до значения в 1200px */
+    padding-right: 310px; /* = боковая колонка + отступ в 10px */
 }
 .all_site{
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    float: left;
+    background-color: #24707c;
+    text-align:left;
+    min-width:800px;
+    max-width: 100%;
+    margin:0 auto;
+    padding: 0 auto;
+    text-align:center;
 }
-.top{
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
+.header{
+    background-color: #EBEDEC;
     float: left;
-    height: 330px;
     width: 100%;
-    border: 1px solid blue;
 }
-.left_side{
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    float:left;
-    border: 3px solid black;
+.left_footer{
+    background-color: #e3bc6c;
+    float: left;
+    height: 300px;
     width: 190px;
-    height: 330px;
 }
-.center{
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    float:left;
-    border: 3px solid black;
-    width: 640px;
-    height: 330px;
-}
-.right_side{
-    margin: 0px 0px 0px 0px;
-    padding: 0px 0px 0px 0px;
-    float:left;
-    border: 3px solid black;
-    height: 330px;
+#name_block{
+    float: left;
+    background-image: url("../img/site/Name_fon.png");
+    background-repeat: repeat-x;
+    height: 90px;
+    width: 170px;
+    margin: 10px 0 0 9px;
+    border: 1px solid #9b6f2d;
 
 }
+#name_block_info{
+margin: 20px 0 0 0;
+}
+#name_block_info b{
+    font-size: 14px;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
+}
+.center{
+    float: left;
+
+    max-width: 100%;
+}
+.right_footer{
+    background-color: #e3bc6c;
+    float: right;
+    height: 300px;
+    width: 190px;
+}
+.footer{
+    background-color: #2400FF;
+    float: left;
+    width: 100%;
+}
+
